<resources>
    <string name="app_name">Discover YourSelf</string>
    <string name="start">start</string>
    <string name="dezacord_puternic">Dezacord puternic</string>
    <string name="partial_in_dezacord">Parțial în dezacord</string>
    <string name="partial_de_acord">Parțial de acord</string>
    <string name="acord_puternic">Acord puternic</string>
    <string name="next">Next</string>
    <string name="total_questions">Total Questions</string>
    <string name="total_questions1">Total Questions</string>
    <string name="this_will_be_the_question1">This will be the question</string>
    <string name="this_will_be_the_question">This will be the question</string>
    <string name="adevarat">Adevărat</string>
    <string name="fals">Fals</string>
    <string name="da">Da</string>
    <string name="nu">Nu</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="despre_empatie">Despre empatie</string>
    <string name="despre_dezn_dejde_i_depresie">Despre deznădejde și depresie</string>
    <string name="despre_stima_de_sine">Despre stima de sine</string>

    <string-array name="categories_array">
        <item>Toate</item>
        <item>Filme</item>
        <item>Seriale</item>
        <item>Podcasturi</item>
        <item>Cărți</item>
        <item>Exerciții din domeniul psihologiei</item>
    </string-array>

</resources>

